# ============================================================================
# Libaevol-post is a library that contains classes shared by several
# post-treatments
# ============================================================================

include_directories(".")

add_library(libaevol-post IndivAnalysis.cpp)
